...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/llBottomSheet"
        app:layout_anchorGravity="right">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="90dp"
            android:src="@drawable/ic_add_black_24dp"
...
